# portviz

./: .gitignore  LICENSE  README.md  REVIEW_REPORT.md  __main__.py  pyproject.toml  services.py
actions/: process.py
cli/: commands.py  formatter.py  json_utils.py  parser.py
collectors/: windows.py
core/: models.py  summary.py
portviz/: __main__.py
portviz/cli/: commands.py  parser.py
portviz/collectors/: windows.py
portviz/core/: processors.py
storage/: snapshot.py
vscode-extension/: .gitignore  .vscodeignore  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
vscode-extension/media/: main.js  styles.css
vscode-extension/src/: extension.ts
vscode-extension/src/models/: portNode.ts
vscode-extension/src/services/: cliRunner.ts  notificationService.ts  orchestrationService.ts  resourceMonitor.ts  snapshotService.ts  terminalManager.ts
vscode-extension/src/types/: orchestration.ts  report.ts  snapshot.ts
vscode-extension/src/views/: dashboardViewProvider.ts  liveViewProvider.ts  orchestrationViewProvider.ts  overviewViewProvider.ts  portsViewProvider.ts  snapshotsViewProvider.ts
